[EFL][WK2] WTR is failing when X server is not running https://bugs.webkit.org/show_bug.cgi?id=92719

Patch by Alexander Shalamov <alexander.shalamov@intel.com> on 2012-08-02
Reviewed by Hajime Morita.

EFL's WebKitTestRunner doesn't execute tests when X server is not running.
This patch fixes the problem by checking environment variable before ecore x initialization.

* Scripts/webkitpy/layout_tests/port/efl.py:
(EflPort.setup_environ_for_server):
* WebKitTestRunner/efl/main.cpp:
(main):

Canonical link: https://commits.webkit.org/110816@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124445 268f45cc-cd09-0410-ab3c-d52691b4dbfc